# fclearn

./: .flake8  .gitignore  .readthedocs.yaml  LICENSE  README.md  bitbucket-pipelines.yml  isort.cfg  noxfile.py  pyproject.toml  setup.py
.github/workflows/: coverage.yaml  tests.yaml
docs/: conf.py  index.rst  reference.rst  requirements.txt
docs/source/: fclearn.decomposition.rst  fclearn.estimator.rst  fclearn.evaluation.rst  fclearn.holidays.rst  fclearn.imputation.rst  fclearn.logger.rst  fclearn.model_selection.rst  fclearn.pandas_helpers.rst  fclearn.pipeline.rst  fclearn.preprocessing.rst  fclearn.reconciliation.rst  fclearn.rst  modules.rst
docs/templates/: module.rst_t
fclearn/: __init__.py  decomposition.py  estimator.py  evaluation.py  holidays.py  imputation.py  logger.py  model_selection.py  pandas_helpers.py  pipeline.py  plotting.py  preprocessing.py  reconciliation.py
tests/: __init__.py  conftest.py  test_evaluation.py  test_model_selection.py  test_pandas_helpers.py
