[tool.poetry]
name = "fclearn"
version = "0.1.0"
description = "Code written for Master Thesis"
authors = ["Lars Hanegraaf <larshanegraaf@live.nl>"]
repository = "https://github.com:LarsHanegraaf/fclearn.git"

[tool.poetry.dependencies]
python = "^3.6"
pandas="0.23"
#python-dateutil="2.8.0"
#pytz="2019.2"
#requests="2.22.0"
#decorator="4.4.0"
#ipykernel="4.8.2"
#ipython_genutils="0.2.0"
#jupyter_client="5.2.4"
#jupyter_core="4.4.0"
#pexpect="4.7.0"
#pickleshare="0.7.5"
#ptyprocess="0.6.0"
#pyzmq="18.0.2"
#simplegeneric="0.8.1"
#tornado="5.1.1"
#traitlets="4.3.2"

seaborn = "^0.11.0"
sklearn = "^0.0"
statsmodels = "^0.12.0"
[tool.poetry.dev-dependencies]
ipykernel = "^5.3.4"
pylint = "^2.6.0"
debugpy = "^1.0.0-rc.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

#[[tool.poetry.source]]
#name = "dss_hc"
#url = "https://dss.hc/public/packages/"
#default = true
