[tool.poetry]
name = "fclearn"
version = "0.1.4"
description = "Code written for Master Thesis"
authors = ["Lars Hanegraaf <larshanegraaf@live.nl>"]
repository = "https://github.com:LarsHanegraaf/fclearn.git"

[tool.poetry.dependencies]
python = "^3.6"
pandas="0.23"
seaborn = "^0.11.0"
sklearn = "^0.0"
statsmodels = "^0.12.0"
importlib_metadata = "^2.0.0"
dataiku-api-client = "7.0.0"
[tool.poetry.dev-dependencies]
ipykernel = "^5.3.4"
pylint = "^2.6.0"
debugpy = "^1.0.0-rc.2"
pytest = "^6.1.1"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-black = "^0.2.1"
flake8-isort = "^4.0.0"
isort = "^5.6.4"
flake8-docstrings = "^1.5.0"
darglint = "^1.5.5"
sphinx = "^3.2.1"
sphinx-autodoc-typehints = "^1.11.1"
sphinx-rtd-theme = "^0.5.0"
codecov = "^2.1.10"
flake8-import-order = "^0.18.1"
poetry-setup = "^0.3.6"
[tool.coverage.paths]
source = ["fclearn", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["fclearn"]

[tool.coverage.report]
show_missing = true

[tool.isort]
profile = "hug"
src_paths = ["fclearn", "test"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

